tests/errors/first_stage/.extern/label_exists/label_exists.am
myLbl: .data 1, 2
.extern myLbl
